--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "astro": "^4.16.10",
-    "@astrojs/check": "^0.9.4",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@iconify-json/line-md": "^1.2.2",
+    "@typescript-eslint/parser": "^8.13.0",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "unplugin-icons": "^0.20.1"
   }
 }
