--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "devDependencies": {
     "@iconify-json/line-md": "^1.2.2",
+    "@iconify-json/logos": "^1.2.3",
+    "@iconify-json/mingcute": "^1.2.1",
+    "@iconify-json/ph": "^1.2.1",
+    "@iconify-json/skill-icons": "^1.2.0",
     "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
